# secure_gate_0.5.0

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: fuzz-miri.yml  fuzz-nightly.yml  fuzz-quick.yml
benches/: fixed_vs_raw.rs
benches/fixed_vs_raw/fixed_[u8; 32]_ access/base/: tukey.json
benches/fixed_vs_raw/fixed_[u8; 32]_ access/new/: benchmark.json  sample.json
benches/fixed_vs_raw/fixed_[u8; 32]_ access/report/: index.html
benches/fixed_vs_raw/fixed_alias! (rawkey) access/change/: estimates.json
benches/fixed_vs_raw/fixed_alias! (rawkey) access/report/: index.html
benches/fixed_vs_raw/raw [u8; 32] access/base/: estimates.json
benches/fixed_vs_raw/raw [u8; 32] access/change/: estimates.json
benches/fixed_vs_raw/raw [u8; 32] access/report/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: clone.rs  expose.rs  parsing.rs  serde.rs  zeroizing.rs
scripts/: package_it.py
src/: conversions.rs  dynamic.rs  expose.rs  fixed.rs  lib.rs  macros.rs  macros.rs.new  no_clone.rs  random_bytes.rs.del  rng.rs  serde.rs  serde.rs.new  zeroize.rs
tests/: conversions_tests.rs  integration.rs  macros_correctness_tests.rs  macros_edge_cases_tests.rs  macros_paranoia_tests.rs  macros_tests.rs  macros_tests.rs.del  no_clone_tests.rs  random_alias_tests.rs  random_bytes_paranoia_tests.rs  rng_correctness_tests.rs  rng_tests.rs
