[package]
name = "secure-gate"
version = "0.5.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Zero-cost secure wrappers for secrets — stack for fixed, heap for dynamic"
repository = "https://github.com/Slurp9187/secure-gate"
documentation = "https://docs.rs/secure-gate"
keywords = ["crypto", "no-std", "security", "zeroize"]
categories = ["cryptography", "no-std", "data-structures"]

[dependencies]
rand = { version = "0.9", optional = true }
secrecy = { version = "0.10", default-features = false, optional = true }
zeroize = { version = "1.8", default-features = false, optional = true, features = [
  "alloc",
  "zeroize_derive",
] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["zeroize"]
zeroize = ["dep:zeroize", "dep:secrecy"]
serde = ["dep:serde"]
rand = ["dep:rand"]

[[bench]]
name = "fixed_vs_raw"
harness = false
