[package]
name = "secure-gate-fuzz"
version = "0.1.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
secure-gate = { path = "../", features = [
  "zeroize",
] } # base zeroize always on for fuzzing
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"
serde_json = "1.0"
bincode = "2.0"
zeroize = { version = "1.8", default-features = false, features = [
  "alloc",
  "zeroize_derive",
] }
secrecy = "0.10"

# Propagate every library feature exactly as defined (v0.5.0 has no 'stack', 'unsafe-wipe', or 'full')
[features]
# Base required feature
zeroize = ["secure-gate/zeroize"]

# Optional library features
serde = ["secure-gate/serde"]

# Default for fuzz runs – enables everything for maximum coverage
default = ["zeroize", "serde"]

[[bin]]
name = "clone"
path = "fuzz_targets/clone.rs"
test = false
bench = false
doc = false

[[bin]]
name = "expose"
path = "fuzz_targets/expose.rs"
test = false
bench = false
doc = false

[[bin]]
name = "mut"
path = "fuzz_targets/mut.rs"
test = false
bench = false
doc = false

[[bin]]
name = "parsing"
path = "fuzz_targets/parsing.rs"
test = false
bench = false
doc = false

[[bin]]
name = "serde"
path = "fuzz_targets/serde.rs"
test = false
bench = false
doc = false

# ← add this block at the end of the existing [[bin]] sections
[[bin]]
name = "zeroizing"
path = "fuzz_targets/zeroizing.rs"
test = false
bench = false
